# auth-service

./: Cargo.toml  config.yaml  configexample.yaml
config/: config.example.yaml
migrations/: 20260516143520_create_roles_table.down.sql  20260516143520_create_roles_table.up.sql  20260516143642_create_users_table.up.sql
src/: app.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  routes.rs
src/config/: config.rs  database.rs
src/dto/: mod.rs  role_dto.rs  user_dto.rs
src/entity/: mod.rs  role_entity.rs  user_entity.rs
src/errors/: api_error.rs  db_error.rs  mod.rs  repository_error.rs  services_error.rs  utils_error.rs
src/graphql/: handler.rs  mutation.rs  query.rs  schema.rs
src/handlers/: health_handler.rs  user_handler.rs
src/middleware/: api_key.rs  auth.rs  method_not_allowed.rs  mod.rs  not_found.rs
src/model/: config_model.rs
src/models/: config_model.rs  jwt_model.rs  mod.rs  role_model.rs  state_model.rs
src/modules/: mod.rs
src/modules/admin/: dto.rs  handler.rs  mod.rs  repository.rs  route.rs  service.rs
src/modules/auth/: dto.rs  handler.rs  repository.rs  route.rs  service.rs
src/modules/user/: dto.rs  handler.rs  repository.rs  route.rs  service.rs
src/repository/: user_repository.rs
src/routes/: auth_router.rs  fallback.rs  guest_router.rs  health.rs  mod.rs  user.rs
src/services/: user_service.rs
src/utils/: hash.rs  jwt.rs  mod.rs  role_check.rs  util.rs
