[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["multipart"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
axum-test = "20.0.0"
chrono = "0.4.44"
config = "0.15.22"
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { version = "1.52.2", features = ["full"] }
tower = "0.5.3"
validator = { version = "0.20.0", features = ["derive"] }
