[package]
name = "kampus"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.9", features = ["multipart"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
axum-test = "20.0.0"
chrono = { version = "0.4.44", features = ["serde"] }
config = "0.15.22"
http = "1.4.0"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["full"] }
tower = "0.5.3"
validator = { version = "0.20.0", features = ["derive"] }
